# delly

./: CMakeLists.txt
src/: delly.h  shortpe.h
